syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloProto";

package io.joyrpc.example.service;

//定义服务
service DemoService {
    //注意：这里是returns 不是return
    rpc sayHello (HelloRequest) returns (HelloResponse) {
    }
}
//定义消息类型
message HelloRequest {
    string name = 1;
}
message HelloResponse {
    string message = 1;
}
